# azure-embedded-sdk-rs-example

./: .gitignore  Cargo.toml  README.md
buildexample/: dockerfile
src/: main.rs
