[package]
name = "azure-embedded-sdk-rs-example"
version = "0.1.0"
authors = ["Mark Radbourne <markrad@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-embedded-sdk-rs = { git = "https://github.com/markrad/azure-embedded-sdk-rs.git", rev = "41fb168e234f5ebbb52848c35e2c421fa78cf512" }
#azure-embedded-sdk-rs = { git = "https://github.com/markrad/azure-embedded-sdk-rs.git", tag = "v0.2.0"  }
paho-mqtt = "0.7.1"
base64 = "0.12.3"
hmac-sha256 = "0.1.6"
regex = "1.4.2"
